# art-islands

./: .gitattributes  .gitignore  README.md  database-cleanup-inventory.md  database-simplify-placeholder-weights.md  database-simplify-post.md  database-simplify-pre.md  database-simplify-reference-dedup.md  database-simplify-removed.md  instructions_v2.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: data-batch.yml
.github/workflows/: ci.yml  data-batch.yml  pages.yml
data/: art-islands.sqlite  settings.json
docs/: feature-model.md
docs/decisions/: 0001-sqlite-git-lfs.md
docs/superpowers/plans/: 2026-07-07-v2-migration-completion.md
e2e/: app.spec.ts  browse.spec.ts  evolution.spec.ts  helpers.ts  islands.spec.ts  workcard.spec.ts
public/: app.js  index.html  recommendations.js  styles.css
public/data/: catalog.json  entities-lookup.json  evolution.json  settings.json  tags.json
public/data/v2/: catalog.json  entities.json  entity-types.json  ratings.json  relations.json  restrictions.json  settings.json
shared/fixtures/: feature-golden.json
src/art_islands/: batch.py  cli.py  evolution.py  features.py  model.py  schema.py  v2.py
tests/: recommendation_scoring.test.js  test_batch.py  test_cli.py  test_evolution.py  test_features.py  test_model.py  test_v2.py
tools/: clean_domain_database.py  generate_feature_golden.py  simplify_domain_database.py
tools/db_v2_migration/: README.md
web/: index.html
web/src/: App.tsx  styles.css
web/src/components/: common.tsx  (+3 more)
(+54 files in other folders)
